# dulwich

./: .bzrignore  .codecov.yml  .codespellrc  .coveragerc  .deepsource.toml  .flake8  .gitignore  .mailmap  .pylintrc  .readthedocs.yaml  .stestr.conf  .testr.conf  .travis.yml  AUTHORS  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTING.rst  COPYING  C_GIT_PERFORMANCE_COMPARISON.md  Cargo.toml  HACKING  LICENSE  MANIFEST.in  Makefile  NEWS  PERFORMANCE  PKG-INFO  README  README.md  README.rst  README.swift  README.swift.md  README.swift.rst  SECURITY.md  STATUS  TODO  appveyor.yml  control  (+74 more)
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  gpg-error-config  gpgme-config
.github/workflows/: android-test.yml  auto-merge.yml  disperse.yml  docs.yml  publish-main.yml  python-distributions.yml  pythonpackage.yml  pythonpublish.yml  pythonpublish.yml.disabled  pythontest.yml  pythonwheels.yml  releaser.yml  tests.yml
contrib/: README.md  README.swift.rst  __init__.py  greenthreads.py  paramiko_vendor.py  release_robot.py  requests_vendor.py  swift.py  test_greenthreads.py  test_paramiko_vendor.py  test_release_robot.py  test_swift.py  test_swift_smoke.py
crates/diff-tree/: Cargo.toml
crates/objects/: Cargo.toml
crates/pack/: Cargo.toml
debian/: .gitignore  bzr-builddeb.conf  changelog  control  copyright  gbp.conf  gitlab-ci.yml  pypy-dulwich.lintian-overrides  python-dulwich.install  python-dulwich.lintian-overrides  python3-dulwich.lintian-overrides  rules  watch
debian/patches/: 01_less_strict_index_tests  01_no_urllib3_pypy  01_refs_unicode  01_reset_chdir  01_setup_cfg  02_cgit_c  02_newer_git  02_skip_flappy_test  02_unpure_pypy  03_cleanup_mode  03_default_identity  04_s390x  auto-0.11.2-1-7cbc394b093fd4567f36a947b809aa042fbed9b8-1447179624  auto-0.17.3-2-1c5c53d182358669aa689f3f5f39d62a7a2d4eae-1500940805  auto-0.18.0-1-4d7c6c481bd37f3d03e3d538fbe336fb5f5b3781-1501464547  disable-tcp-client-test.diff  older-git  series  sources_debian
debian/source/: options
debian/tests/: control  testsuite  testsuite3
debian/upstream/: metadata  signing-key.asc  signing-key.pgp
devscripts/: PREAMBLE.c  PREAMBLE.py  fix-history.py  replace-preamble.sh
docs/: Makefile  c-git-compatibility.txt  changelog.rst  conf.py  index.rst  index.txt  make.bat  overview.txt  performance.txt  protocol.txt
docs/api/: dulwich.client.rst  dulwich.client.txt  dulwich.contrib.release_robot.txt  dulwich.contrib.swift.txt  dulwich.contrib.test_release_robot.txt  dulwich.contrib.test_swift_smoke.txt  dulwich.contrib.txt  dulwich.diff_tree.txt  dulwich.errors.rst  dulwich.file.rst  dulwich.greenthreads.txt  dulwich.hooks.txt  dulwich.ignore.txt  dulwich.index.rst  dulwich.line_ending.txt  dulwich.log_utils.txt  dulwich.lru_cache.txt  dulwich.object_store.rst  dulwich.objects.rst  dulwich.objects.txt  dulwich.objectspec.txt  dulwich.pack.rst  dulwich.pack.txt  dulwich.patch.rst  dulwich.patch.txt  dulwich.protocol.rst  dulwich.reflog.txt  dulwich.repo.rst  dulwich.repo.txt  dulwich.rst  dulwich.server.rst  dulwich.stash.txt  dulwich.tests.compat.test_pack.txt  dulwich.tests.compat.test_patch.txt  dulwich.tests.compat.test_repository.txt  dulwich.tests.compat.txt  dulwich.tests.compat.utils.txt  dulwich.tests.test_client.txt  dulwich.tests.test_diff_tree.txt  dulwich.tests.test_fastexport.txt  (+24 more)
docs/recipes/: index.txt
docs/tutorial/: .gitignore  0-introduction.txt  1-initial-commit  1-initial-commit.txt  1-repo.txt  2-change-file.txt  2-change_file.txt  2-object-store.txt  3-add-file.txt  3-conclusion.txt  4-remove-file.txt  5-rename-file.txt  6-conclusion.txt  Makefile  conclusion.txt  encoding.txt  file-format.txt  index.txt  introduction.rst  introduction.txt  object-store.rst  object-store.txt  porcelain.txt  remote.txt  repo.txt  tag.txt  test.py
dulwich/: OrderedDict.py  __init__.py  __init__.pyi  __main__.py  _compat.py  _diff_tree.c  _objects.c  _pack.c  _py3_compat.py  _typing.py  aiohttp.py  allowed_signers.py  am.py  annotate.py  approxidate.py  archive.py  attrs.py  bisect.py  bitmap.py  bundle.py  bundle_uri.py  cli.py  client.py  clone.py  commit.py  commit_graph.py  config.py  credentials.py  diff.py  diff_tree.py  diffstat.py  dumb.py  errors.py  eventlet.py  fastexport.py  file.py  filter_branch.py  filters.py  gc.py  graph.py  (+57 more)
dulwich.egg-info/: PKG-INFO  SOURCES.txt  SOURCES.txt.~1~  SOURCES.txt.~2~  entry_points.txt  pbr.json  requires.txt
dulwich/aiohttp/: __init__.py  server.py
dulwich/cloud/: __init__.py  gcs.py
dulwich/contrib/: __init__.py  diffstat.py  greenthreads.py  latest_git_tags.py  multi_server.py  paramiko.py  paramiko_vendor.py  release_robot.py  requests_vendor.py  robotic_releases.py  ssh_keygen_criterion.py  swift.py  test_paramiko_vendor.py  test_release_robot.py  test_swift.py  test_swift_smoke.py
dulwich/porcelain/: __init__.py  lfs.py  notes.py  submodule.py  subtree.py  tag.py  worktree.py
dulwich/tests/: __init__.py  test_annotate.py  test_archive.py  test_blackbox.py  test_bundle.py  test_cli.py  (+36 more)
examples/: auth_callback.py  clone.py  config.py  diff.py  filter_branch.py  gcs.py  latest_change.py  memoryrepo.py  merge_driver.py  rename-branch.py
fuzzing/: README.md
git/: __init__.py  errors.py  objects.py  pack.py  repository.py
property_tests/: test_objects.py
testdata/: test_sign_key  test_sign_key.pub
tests/: __init__.py  control  test___init__.py  test___main__.py  test_aiohttp.py  test_allowed_signers.py  test_annotate.py  test_approxidate.py  test_archive.py  test_attrs.py  test_bisect.py  test_bitmap.py  test_blackbox.py  test_bundle.py  test_bundle_uri.py  test_cli.py  test_cli_cherry_pick.py  test_cli_merge.py  test_client.py  test_cloud_gcs.py  test_commit_graph.py  test_config.py  test_credentials.py  test_diff.py  test_diff_tree.py  test_diffstat.py  test_dumb.py  test_fastexport.py  test_file.py  test_filter_branch.py  test_filters.py  test_gc.py  test_grafts.py  test_graph.py  test_greenthreads.py  test_hooks.py  test_ignore.py  test_index.py  test_lfs.py  test_lfs_integration.py  (+54 more)
(+106 files in other folders)
