[metadata]
name = dulwich
author = Jelmer Vernooij
author_email = jelmer@jelmer.uk
home-page = https://www.dulwich.io/
description = file:README.md
summary = Python Git Library
classifiers = 
	Development Status :: 4 - Beta
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Operating System :: POSIX
	Operating System :: Microsoft :: Windows
	Topic :: Software Development :: Version Control
keyword = git, vcs
project_urls = 
	Bug Tracker = https://github.com/dulwich/dulwich/issues

[build_ext]

[egg_info]
tag_build = 
tag_date = 0

