[mypy]
ignore_missing_imports = True

[metadata]
name = dulwich
version = attr:dulwich.__version__
description = Python Git Library
long_description = file:README.rst
url = https://www.dulwich.io/
author = Jelmer Vernooij
author_email = jelmer@jelmer.uk
license = Apachev2 or later or GPLv2
keywords = vcs, git
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Topic :: Software Development :: Version Control
project_urls =
    Repository=https://www.dulwich.io/code/
    GitHub=https://github.com/dulwich/dulwich
    Bug Tracker=https://github.com/dulwich/dulwich/issues
license_files = COPYING

[options.extras_require]
fastimport = fastimport
https = urllib3>=1.24.1
pgp = gpg
paramiko = paramiko

[options.entry_points]
console_scripts =
    dulwich = dulwich.cli:main

[options]
python_requires = >=3.7
packages =
    dulwich
    dulwich.cloud
    dulwich.tests
    dulwich.tests.compat
    dulwich.contrib
include_package_data = True
install_requires =
    urllib3>=1.25
zip_safe = False
scripts =
    bin/dul-receive-pack
    bin/dul-upload-pack
